--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,91 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <script src="https://kit.fontawesome.com/a4efd995d2.js" crossorigin="anonymous"></script>
     <title>idn-area Example</title>
   </head>
-  <body></body>
+  <body>
+    <header class="sticky-top">
+      <nav-bar></nav-bar>
+    </header>
+    <main>
+      <div class="container-fluid d-flex flex-row flex-wrap p-0">
+        <div class="col-xl-6 col-12 py-3 px-4">
+          <h2 class="mb-4">Form Select</h2>
+          <div class="mb-3">
+            <label for="province" class="form-label">Province</label>
+            <select class="form-select" id="province">
+              <datalist id="provinces">
+                <option selected>Select a province</option>
+                <option value="1">One</option>
+                <option value="2">Two</option>
+                <option value="3">Three</option>
+              </datalist>
+            </select>
+          </div>
+          <div class="mb-3">
+            <label for="regency" class="form-label">Regency</label>
+            <select class="form-select" id="regency" disabled>
+              <datalist id="regencies">
+                <option selected>Select a regency</option>
+                <option value="1">One</option>
+                <option value="2">Two</option>
+                <option value="3">Three</option>
+              </datalist>
+            </select>
+          </div>
+          <div class="mb-3">
+            <label for="district" class="form-label">District</label>
+            <select class="form-select" id="district" disabled>
+              <datalist id="districts">
+                <option selected>Select a district</option>
+                <option value="1">One</option>
+                <option value="2">Two</option>
+                <option value="3">Three</option>
+              </datalist>
+            </select>
+          </div>
+          <div class="mb-3">
+            <label for="village" class="form-label">Village</label>
+            <select class="form-select" id="village" disabled>
+              <datalist id="villages">
+                <option selected>Select a village</option>
+                <option value="1">One</option>
+                <option value="2">Two</option>
+                <option value="3">Three</option>
+              </datalist>
+            </select>
+          </div>
+        </div>
+        <div class="col-xl-6 col-12 py-3 px-4">
+          <h2 class="mb-4">Search By Name</h2>
+          <div class="mb-3">
+            <div class="form-check form-check-inline">
+              <input class="form-check-input" type="radio" name="searchBy" id="provinceOption" value="Province">
+              <label class="form-check-label" for="provinceOption">Province</label>
+            </div>
+            <div class="form-check form-check-inline">
+              <input class="form-check-input" type="radio" name="searchBy" id="regencyOption" value="Regency">
+              <label class="form-check-label" for="regencyOption">Regency</label>
+            </div>
+            <div class="form-check form-check-inline">
+              <input class="form-check-input" type="radio" name="searchBy" id="districtOption" value="District">
+              <label class="form-check-label" for="districtOption">District</label>
+            </div>
+            <div class="form-check form-check-inline">
+              <input class="form-check-input" type="radio" name="searchBy" id="villageOption" value="Village">
+              <label class="form-check-label" for="villageOption">Village</label>
+            </div>
+          </div>
+          <div class="form-floating mb-3">
+            <input type="text" class="form-control" id="searchByName" placeholder="Input the name">
+            <label for="searchByName">Input the name</label>
+            <div id="searchByNameHelp" class="form-text">Type min. 3 characters to start searching.</div>
+          </div>
+        </div>
+      </div>
+    </main>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+  </body>
 </html>
