--- a/src/index.html
+++ b/src/index.html
@@ -23,27 +23,17 @@
         <div class="col-xl-6 col-12 py-3 px-4">
           <h2 class="mb-4">Search By Name</h2>
           <div class="mb-3">
-            <div class="form-check form-check-inline">
-              <input class="form-check-input" type="radio" name="searchBy" id="provinceOption" value="Province">
-              <label class="form-check-label" for="provinceOption">Province</label>
-            </div>
-            <div class="form-check form-check-inline">
-              <input class="form-check-input" type="radio" name="searchBy" id="regencyOption" value="Regency">
-              <label class="form-check-label" for="regencyOption">Regency</label>
-            </div>
-            <div class="form-check form-check-inline">
-              <input class="form-check-input" type="radio" name="searchBy" id="districtOption" value="District">
-              <label class="form-check-label" for="districtOption">District</label>
-            </div>
-            <div class="form-check form-check-inline">
-              <input class="form-check-input" type="radio" name="searchBy" id="villageOption" value="Village">
-              <label class="form-check-label" for="villageOption">Village</label>
-            </div>
+            <form-radio name="searchBy" id="provinceOption" label="Province" value="provinces" checked></form-radio>
+            <form-radio name="searchBy" id="regencyOption" label="Regency" value="regencies"></form-radio>
+            <form-radio name="searchBy" id="districtOption" label="District" value="districts"></form-radio>
+            <form-radio name="searchBy" id="villageOption" label="Village" value="villages"></form-radio>
           </div>
           <div class="form-floating mb-3">
             <input type="text" class="form-control" id="searchByName" placeholder="Input the name">
             <label for="searchByName">Input the name</label>
             <div id="searchByNameHelp" class="form-text">Type min. 3 characters to start searching.</div>
+          </div>
+          <div id="searchByNameResult" class="mb-3">
           </div>
         </div>
       </div>
