Crearte SearchResults element

--- a/src/index.html
+++ b/src/index.html
@@ -29,8 +29,7 @@
             <form-radio name="searchBy" id="villageOption" label="Village" value="villages"></form-radio>
           </div>
           <search-bar id="searchByName" label="Input the name" placeholder="Input the name" helper="Type min. 3 characters to start searching"></search-bar>
-          <div id="searchByNameResult" class="mb-3">
-          </div>
+          <search-results></search-results>
         </div>
       </div>
     </main>
